* 2006-16-01
Thanks to Judith Lebzelter now the module gets advantage of the LSB's /etc/lsb-release file.
Added support for Ubuntu and version information retrieval for gentoo, debian, suse, fedora,
redhat and slackware.

* 2005-03-10
Added support for yoper, arch-linux and libranet.

* 2005-03-09
Cleaned code.

* 2005-03-08
Version 0.03.
Added support for Adamantix and Trustix.

* 2005-03-07
Reduced needed perl version to 5.6.0.
Removed copyright line from pod documentation.

* 2005-03-06
Version 0.02.

* 2005-03-06
Added support for immunix, conectiva, tinysofa and va-linux.

* 2005-03-06
Updated changelog

* 2005-03-06 20:14:28 +0100
Version 0.01.