@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Linux-Distribution
-version:      0.13
+version:      0.14
 version_from: lib/Linux/Distribution.pm
 installdirs:  site
 requires:
